# garmin-cycling-coach

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
frontend/: app.js  index.html  styles.css
src/garmin_coach/: cli.py  config.py  dashboard.py  db.py  garmin_client.py  llm.py  models.py  recommender.py  report.py  web.py
